src/test/deca/syntax/invalid/intermediaire2/printx/01printlnx.deca
{
    printlnx(0x1.FFFFFE0);
}